# SubstitutionBreaker

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: cli.rst  cli_explained.rst  conf.py  index.rst  installation.rst  overview.rst  py_explained.rst  subbreaker.rst  usage.rst
subbreaker/: __init__.py  breaker.py  command.py  key.py
subbreaker/quadgram/: EN.json
tests/: conftest.py  test_breaker.py  test_command.py  test_key.py
tests/fixturefiles/: fixed_cipher.txt
