[metadata]
name = subbreaker
version = file: subbreaker/_version.py
author = Jens Guballa
author_email = jens@guballa.de
url = https://gitlab.com/guballa/SubstitutionBreaker
description = A tool to break substitution ciphers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
platform = any
keywords = classical cipher breaker solver substitution cryptogram
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://gitlab.com/guballa/SubstitutionBreaker/issues
    Changelog = https://gitlab.com/guballa/SubstitutionBreaker/-/blob/master/CHANGELOG.rst
    Source = https://gitlab.com/guballa/SubstitutionBreaker

[options]
packages = subbreaker
install_requires =
    importlib_metadata;python_version<'3.8'
zip_safe = True
python_requires = >= 3.5, <4
include_package_data = False
setup_requires =
    setuptools >= 42
tests_require =
    pytest
    pytest-cov

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    flake8
    sphinx
    sphinx-argparse
    tox
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    subbreaker = subbreaker.command:main

[options.package_data]
subbreaker =
    quadgram/EN.json

[flake8]
max-line-length = 88

[tox:tox]
envlist = py35, py36, py37, py38

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest --cov={envsitepackagesdir}/subbreaker

[coverage:run]
branch = true
source = subbreaker
omit =
    */_version.py
